--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
     <canvas id="c"></canvas>
 
     <div id="ui-layer">
-        <div id="hud">GEOMETRIC CHAOS · PLANET CHAOS · ARCHIVE 2026</div>
+        <div id="hud">ARCHIVE 2026.lavanda.audit.</div>
         <div id="hud-sub">lavanda audit · ibonarium · project 2026</div>
         <div id="status">ініціалізація...</div>
 
