--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+`<!DOCTYPE html>
 <html lang="uk">
 
 <head>
@@ -123,8 +123,8 @@
         #heatmap {
             position: absolute;
             top: 80px;
-            right: 240px;
-            /* Moved further left from graphs */
+            right: 650px;
+            /* Moved significantly left to avoid overlapping with 2nd column of graphs */
             display: grid;
             grid-template-columns: repeat(8, 14px);
             gap: 2px;
@@ -255,18 +255,18 @@
         <div id="heatmap"></div>
 
         <div id="months-nav" class="interactive">
-            <a href="https://lavandaaudit.github.io/radio_underground.signal-off-grid/#">JANUARY</a>
-            <a href="https://lavandaaudit.github.io/radio_underground.signal-off-grid/#">FEBRUARY</a>
-            <a href="https://lavandaaudit.github.io/radio_underground.signal-off-grid/#">MARCH</a>
-            <a href="https://lavandaaudit.github.io/radio_underground.signal-off-grid/#">APRIL</a>
-            <a href="https://lavandaaudit.github.io/radio_underground.signal-off-grid/#">MAY</a>
-            <a href="https://lavandaaudit.github.io/radio_underground.signal-off-grid/#">JUNE</a>
-            <a href="https://lavandaaudit.github.io/radio_underground.signal-off-grid/#">JULY</a>
-            <a href="https://lavandaaudit.github.io/radio_underground.signal-off-grid/#">AUGUST</a>
-            <a href="https://lavandaaudit.github.io/radio_underground.signal-off-grid/#">SEPTEMBER</a>
-            <a href="https://lavandaaudit.github.io/radio_underground.signal-off-grid/#">OCTOBER</a>
-            <a href="https://lavandaaudit.github.io/radio_underground.signal-off-grid/#">NOVEMBER</a>
-            <a href="https://lavandaaudit.github.io/radio_underground.signal-off-grid/#">DECEMBER</a>
+            <a href="#">JANUARY</a>
+            <a href="#">FEBRUARY</a>
+            <a href="#">MARCH</a>
+            <a href="#">APRIL</a>
+            <a href="#">MAY</a>
+            <a href="#">JUNE</a>
+            <a href="#">JULY</a>
+            <a href="#">AUGUST</a>
+            <a href="#">SEPTEMBER</a>
+            <a href="#">OCTOBER</a>
+            <a href="#">NOVEMBER</a>
+            <a href="#">DECEMBER</a>
         </div>
 
         <div id="data-main" class="interactive"></div>
@@ -301,11 +301,21 @@
 
         const proxy = 'https://corsproxy.io/?';
 
+        // DATA STATE
         let realData = { seismic: 0.5, magnetic: 0.5, atmosphere_wind: 0.5, atmosphere_pressure: 0.5, atmosphere_temp: 0.5, ocean: 0.5, solar_radiation: 0.5, solar_wind: 0.5, precipitation: 0.5, chaos: 0.5 };
         let solarIndices = { f107: 120, kp: 2.0, ap: 12, dst: -15, ssn: 85, xray: -6.5, proton: 0.3, electron: 150, bz: -2.5, density: 5.2 };
         let earthEnvData = { air_quality_pm25: 15, air_quality_aqi: 45, co: 0.4, no2: 25, o3: 40, so2: 10, uv_index: 3.5, humidity: 65, cloud_cover: 45, visibility: 12 };
 
+        // HISTORY FOR DYNAMIC GRAPHS
+        const HISTORY_LIMIT = 50;
         let dataHistory = {}; Object.keys(realData).forEach(k => dataHistory[k] = []);
+        let kpHistory = [];
+        let btcHistory = [];
+        let aqiHistory = [];
+        let solarWindHistory = [];
+        let oilHistory = [];
+        let windHistory = []; // Fixed: Added initialization for weather wind history
+
         let heatmapValues = [];
 
         const stars = [];
@@ -369,6 +379,11 @@
             return null;
         }
 
+        function updateHistory(arr, val) {
+            arr.push(val);
+            if (arr.length > HISTORY_LIMIT) arr.shift();
+        }
+
         async function fetchAllData() {
             statusDiv.innerHTML = 'оновлення джерел...';
             let html = '';
@@ -396,6 +411,7 @@
                     { label: 'Wind Speed', value: w.wind_speed_10m, thresholds: { watch: 15, warn: 20, danger: 25 }, unit: ' km/h' },
                     { label: 'Precipitation', value: w.precipitation, thresholds: { watch: 1, warn: 5, danger: 10 }, unit: ' mm' },
                 ];
+                updateHistory(windHistory, w.wind_speed_10m || 0);
                 wMetrics.forEach(m => {
                     html += `<div class="row"><span class="label">${m.label} </span><span class="val ${getColorClass(m.value, m.thresholds)}">${m.value}${m.unit}</span></div>`;
                     heatmapValues.push({ value: m.value, color: getColor(m.value, m.thresholds) });
@@ -415,6 +431,8 @@
                 earthEnvData.so2 = a.sulphur_dioxide || 10;
                 earthEnvData.air_quality_aqi = a.european_aqi || 50;
                 earthEnvData.uv_index = a.uv_index || 3;
+
+                updateHistory(aqiHistory, a.european_aqi || 0);
 
                 const airMetrics = [
                     { label: 'European AQI', value: a.european_aqi, thresholds: { watch: 51, warn: 101, danger: 151 } },
@@ -440,21 +458,27 @@
             html += '<div class="category">КОСМОС (SOLAR)</div>';
             const plasma = await fetchWithProxy('https://services.swpc.noaa.gov/products/solar-wind/plasma-7-day.json');
             if (plasma?.length > 1) {
-                let lastValid = plasma.slice().reverse().find(r => !isNaN(parseFloat(r[3])) && parseFloat(r[3]) > 0);
+                // Determine indices from header if possible, else use default [1:den, 2:speed, 3:temp]
+                let speedIdx = 2, denIdx = 1, tempIdx = 3;
+                if (plasma[0].includes('speed')) speedIdx = plasma[0].indexOf('speed');
+                if (plasma[0].includes('density')) denIdx = plasma[0].indexOf('density');
+                if (plasma[0].includes('temperature')) tempIdx = plasma[0].indexOf('temperature');
+
+                let lastValid = plasma.slice().reverse().find(r => !isNaN(parseFloat(r[speedIdx])) && parseFloat(r[speedIdx]) > 0);
                 if (lastValid) {
-                    const speed = parseFloat(lastValid[3]);
-                    const den = parseFloat(lastValid[6]);
-                    const bz = parseFloat(lastValid[8]);
+                    const speed = parseFloat(lastValid[speedIdx]);
+                    const den = parseFloat(lastValid[denIdx]);
+                    const temp = parseFloat(lastValid[tempIdx]);
                     realData.solar_wind = Math.min(1, Math.max(0, (speed - 250) / 750));
                     solarIndices.density = den;
-                    solarIndices.bz = bz;
+                    solarIndices.bz = -2.5; // Bz is usually in magnetometer data, not plasma, sticking to dummy or separate fetch
+                    updateHistory(solarWindHistory, speed);
 
                     const plasmaMetrics = [
                         { label: 'Solar Wind Speed', value: speed, thresholds: { watch: 500, warn: 700, danger: 900 }, unit: ' km/s' },
                         { label: 'Solar Wind Density', value: den, thresholds: { watch: 15, warn: 30, danger: 50 }, unit: ' /cm³' },
-                        { label: 'Solar Wind Temp', value: parseFloat(lastValid[7]) / 1000, thresholds: { watch: 100, warn: 300, danger: 500 }, unit: ' kK' },
-                        { label: 'Mag Field Bt', value: parseFloat(lastValid[2]), thresholds: { watch: 5, warn: 10, danger: 20 }, unit: ' nT' },
-                        { label: 'Mag Field Bz', value: bz, thresholds: { watch: 5, warn: 10, danger: 20 }, unit: ' nT' }
+                        { label: 'Solar Wind Temp', value: temp / 1000, thresholds: { watch: 100, warn: 300, danger: 500 }, unit: ' kK' },
+                        { label: 'Mag Field Bt', value: 5.0, thresholds: { watch: 5, warn: 10, danger: 20 }, unit: ' nT' },
                     ];
                     plasmaMetrics.forEach(m => {
                         html += `<div class="row"><span class="label">${m.label} </span><span class="val ${getColorClass(m.value, m.thresholds)}">${m.value.toFixed(1)}${m.unit}</span></div>`;
@@ -468,6 +492,8 @@
             if (kpData?.length) {
                 const lastKp = parseFloat(kpData[kpData.length - 1][1]) || 0;
                 solarIndices.kp = lastKp;
+                updateHistory(kpHistory, lastKp);
+
                 html += `<div class="row"><span class="label">Kp-index </span><span class="val ${getColorClass(lastKp, { watch: 5, warn: 6, danger: 7 })}">${lastKp}</span></div>`;
                 heatmapValues.push({ value: lastKp, color: getColor(lastKp, { watch: 5, warn: 6, danger: 7 }) });
                 for (let i = 2; i <= 4; i++) {
@@ -490,27 +516,6 @@
                 const fluxVal = xray[0].flux || 0;
                 html += `<div class="row"><span class="label">X-ray Flare </span><span class="val">${fluxVal} ${xray[0].class_type ?? ''}</span></div>`;
                 heatmapValues.push({ value: fluxVal, color: '#ffd700' });
-            }
-
-            const sunspots = await fetchWithProxy('https://services.swpc.noaa.gov/json/solar-cycle/predicted-solar-cycle.json');
-            if (sunspots && sunspots.length > 0) {
-                const val = sunspots[sunspots.length - 1]['predicted_sunspot_number'];
-                html += `<div class="row"><span class="label">Sunspot Num </span><span class="val">${val}</span></div>`;
-                heatmapValues.push({ value: val, color: '#ffd700' });
-            }
-
-            const proton = await fetchWithProxy('https://services.swpc.noaa.gov/json/goes/primary/integral-protons-1-day.json');
-            if (proton && proton.length > 0) {
-                const val = parseFloat(proton[proton.length - 1].flux);
-                html += `<div class="row"><span class="label">Proton Flux </span><span class="val ${getColorClass(val, { watch: 10, warn: 100, danger: 1000 })}">${val.toExponential(1)}</span></div>`;
-                heatmapValues.push({ value: val, color: getColor(val, { watch: 10, warn: 100, danger: 1000 }) });
-            }
-
-            const electron = await fetchWithProxy('https://services.swpc.noaa.gov/json/goes/primary/integral-electrons-1-day.json');
-            if (electron && electron.length > 0) {
-                const val = parseFloat(electron[electron.length - 1].flux);
-                html += `<div class="row"><span class="label">Electron Flux </span><span class="val ${getColorClass(val, { watch: 1000, warn: 10000, danger: 100000 })}">${val.toExponential(1)}</span></div>`;
-                heatmapValues.push({ value: val, color: getColor(val, { watch: 1000, warn: 10000, danger: 100000 }) });
             }
 
             // --- 4. WATER ---
@@ -537,6 +542,7 @@
                 const dat = await fetchWithProxy(`https://query1.finance.yahoo.com/v8/finance/chart/${c.symbol}?range=1d&interval=1d`);
                 if (dat?.chart?.result?.[0]?.meta?.regularMarketPrice) {
                     const val = dat.chart.result[0].meta.regularMarketPrice;
+                    if (c.symbol === 'CL=F') updateHistory(oilHistory, val);
                     html += `<div class="row"><span class="label">${c.name} </span><span class="val">${val.toFixed(2)} $</span></div>`;
                     heatmapValues.push({ value: val, color: '#0f0' });
                     loaded++;
@@ -577,15 +583,10 @@
             const crypto = await fetchWithProxy(`https://api.coingecko.com/api/v3/simple/price?ids=${cryptoIds}&vs_currencies=usd`);
             if (crypto) {
                 for (let k in crypto) {
+                    if (k === 'bitcoin') updateHistory(btcHistory, crypto[k].usd);
                     html += `<div class="row"><span class="label">${k.toUpperCase()} </span><span class="val">${crypto[k].usd} $</span></div>`;
                     heatmapValues.push({ value: 1, color: '#0f0' });
                 }
-            }
-            const sp500 = await fetchSmart('https://query1.finance.yahoo.com/v8/finance/chart/^GSPC?range=1d&interval=1d');
-            if (sp500?.chart?.result?.[0]?.meta?.regularMarketPrice) {
-                const val = sp500.chart.result[0].meta.regularMarketPrice;
-                html += `<div class="row"><span class="label">S&P 500 </span><span class="val">${val.toFixed(2)}</span></div>`;
-                heatmapValues.push({ value: val, color: '#0f0' });
             }
 
             // --- 9. CURRENCIES ---
@@ -600,6 +601,11 @@
                 });
             }
 
+            // Update dataHistory for old graphs
+            Object.keys(realData).forEach(k => {
+                updateHistory(dataHistory[k], realData[k]);
+            });
+
             dataDiv.innerHTML = html || '<div>немає даних</div>';
             statusDiv.innerHTML = `джерела: ${loaded} • ${new Date().toLocaleTimeString()}`;
             updateHeatmap();
@@ -609,6 +615,34 @@
         setInterval(fetchAllData, 60000);
 
         // --- DRAWING FUNCTIONS ---
+
+        function drawGraphHelper(title, history, mx, my, w, h, color, maxVal, unit) {
+            ctx.save(); ctx.translate(mx, my);
+            ctx.strokeStyle = 'rgba(180,180,180,0.15)'; ctx.lineWidth = 1;
+            for (let i = 0; i <= 5; i++) {
+                let y = i * h / 5; ctx.beginPath(); ctx.moveTo(0, y); ctx.lineTo(w, y); ctx.stroke();
+                let x = i * w / 5; ctx.beginPath(); ctx.moveTo(x, 0); ctx.lineTo(x, h); ctx.stroke();
+            }
+            ctx.fillStyle = color; ctx.font = '10px Courier New'; ctx.fillText(title, 0, -5);
+
+            if (history.length > 1) {
+                ctx.beginPath();
+                history.forEach((v, i) => {
+                    const x = i * (w / (HISTORY_LIMIT - 1));
+                    const y = h - (v / maxVal) * h;
+                    i === 0 ? ctx.moveTo(x, y) : ctx.lineTo(x, y);
+                });
+                ctx.strokeStyle = color; ctx.lineWidth = 1.8; ctx.stroke();
+
+                const lastV = history[history.length - 1];
+                const lastX = (history.length - 1) * (w / (HISTORY_LIMIT - 1));
+                const lastY = h - (lastV / maxVal) * h;
+                ctx.beginPath(); ctx.arc(lastX, lastY, 3, 0, 6.28); ctx.fillStyle = '#fff'; ctx.fill();
+                ctx.fillStyle = color; ctx.fillText(lastV.toFixed(1) + (unit || ''), w + 5, lastY + 4);
+            }
+            ctx.restore();
+        }
+
         function drawCombinedGrid() {
             if (canvas.width < 900) return;
             const w = 180, h = 100, mx = canvas.width - w - 20, my = 80;
@@ -697,6 +731,30 @@
             ctx.restore();
         }
 
+        function drawStressGrids() {
+            if (canvas.width < 900) return;
+            const w = 180; const mx = canvas.width - w - 20; const my = 500;
+            ctx.save(); ctx.translate(mx, my);
+            ctx.fillStyle = 'rgba(0,170,255,0.8)'; ctx.font = '10px Courier New'; ctx.fillText('SECTOR STRESS INDEX', 0, -10);
+            const sectors = [
+                { l: 'GEOSPHERE', v: realData.seismic },
+                { l: 'MAGNETOSPHERE', v: realData.magnetic },
+                { l: 'ATMOSPHERE', v: realData.atmosphere_wind },
+                { l: 'BIOSPHERE', v: earthEnvData.air_quality_aqi / 200 },
+                { l: 'HELIOSPHERE', v: realData.solar_wind },
+                { l: 'STABILITY', v: 1 - realData.chaos }
+            ];
+            sectors.forEach((s, i) => {
+                const y = i * 20; const val = Math.max(0.05, Math.min(1, s.v));
+                ctx.fillStyle = 'rgba(100,200,255,0.6)'; ctx.font = '8px Courier New'; ctx.fillText(s.l, 0, y + 8);
+                ctx.fillStyle = 'rgba(0,40,60,0.4)'; ctx.fillRect(0, y + 10, w, 4);
+                const color = s.v > 0.7 ? 'rgba(255,50,50,0.8)' : (s.v > 0.4 ? 'rgba(255,200,50,0.8)' : 'rgba(0,255,150,0.8)');
+                ctx.fillStyle = color; ctx.fillRect(0, y + 10, w * val, 4);
+                ctx.fillStyle = color; ctx.fillText((val * 100).toFixed(0) + '%', w + 5, y + 14);
+            });
+            ctx.restore();
+        }
+
         function drawSystemTopology() {
             const r = Math.min(canvas.width, canvas.height) * 0.16;
             const cx = canvas.width / 2 + (canvas.width > 900 ? 50 : 0);
@@ -724,50 +782,6 @@
                     ctx.fillText(d.l, Math.cos(a) * (r + 20), Math.sin(a) * (r + 20));
                 }
             });
-            ctx.restore();
-        }
-
-        function drawStressGrids() {
-            if (canvas.width < 900) return;
-            const w = 180; // Same width as other graphs
-            const mx = canvas.width - w - 20; // Aligned with graphs on the right
-            const my = 500; // Positioned under the Earth Env graph
-            ctx.save(); ctx.translate(mx, my);
-
-            ctx.fillStyle = 'rgba(0,170,255,0.8)'; ctx.font = '10px Courier New';
-            ctx.fillText('SECTOR STRESS INDEX', 0, -10);
-
-            const sectors = [
-                { l: 'GEOSPHERE', v: realData.seismic },
-                { l: 'MAGNETOSPHERE', v: realData.magnetic },
-                { l: 'ATMOSPHERE', v: realData.atmosphere_wind },
-                { l: 'BIOSPHERE', v: earthEnvData.air_quality_aqi / 200 },
-                { l: 'HELIOSPHERE', v: realData.solar_wind },
-                { l: 'STABILITY', v: 1 - realData.chaos }
-            ];
-
-            sectors.forEach((s, i) => {
-                const y = i * 20;
-                const val = Math.max(0.05, Math.min(1, s.v));
-
-                // Label
-                ctx.fillStyle = 'rgba(100,200,255,0.6)'; ctx.font = '8px Courier New';
-                ctx.fillText(s.l, 0, y + 8);
-
-                // Bar Bg
-                ctx.fillStyle = 'rgba(0,40,60,0.4)';
-                ctx.fillRect(0, y + 10, w, 4);
-
-                // Bar Fill
-                const color = s.v > 0.7 ? 'rgba(255,50,50,0.8)' : (s.v > 0.4 ? 'rgba(255,200,50,0.8)' : 'rgba(0,255,150,0.8)');
-                ctx.fillStyle = color;
-                ctx.fillRect(0, y + 10, w * val, 4);
-
-                // Value text
-                ctx.fillStyle = color;
-                ctx.fillText((val * 100).toFixed(0) + '%', w + 5, y + 14);
-            });
-
             ctx.restore();
         }
 
@@ -803,8 +817,35 @@
                 ctx.fillStyle = `rgba(180,255,200,${f.alpha * 0.25})`;
                 ctx.font = '16px Courier New'; ctx.fillText(f.text, f.x + Math.sin(t + f.phase) * 20, f.y + Math.cos(t + f.phase) * 15);
             });
-            drawCombinedGrid(); drawSolarGrid(); drawEarthEnvGrid(); drawSystemTopology();
-            drawStressGrids(); // New added grid
+
+            // EXISTING GRAPHS (RIGHT COLUMN 1)
+            drawCombinedGrid();
+            drawSolarGrid();
+            drawEarthEnvGrid();
+            drawSystemTopology();
+            drawStressGrids();
+
+            // NEW DYNAMIC GRAPHS (RIGHT COLUMN 2 / LEFT SIDE)
+            if (canvas.width > 1200) {
+                const w = 180, h = 80;
+                const mx = canvas.width - 420; // Shifted left from original graphs
+
+                // 1. Kp Index Dynamics
+                drawGraphHelper('SOLAR KP-INDEX', kpHistory, mx, 80, w, h, 'rgba(255, 200, 0, 0.8)', 9, '');
+
+                // 2. Bitcoin Volatility
+                const maxBtc = btcHistory.length ? Math.max(...btcHistory) * 1.05 : 100000;
+                drawGraphHelper('BTC/USD VALUE', btcHistory, mx, 190, w, h, 'rgba(0, 255, 100, 0.8)', maxBtc, '$');
+
+                // 3. AQI Monitor
+                drawGraphHelper('EUROPEAN AQI', aqiHistory, mx, 300, w, h, 'rgba(100, 200, 255, 0.8)', 200, '');
+
+                // 4. Solar Wind Velocity
+                drawGraphHelper('SOLAR WIND VEL', solarWindHistory, mx, 410, w, h, 'rgba(255, 100, 255, 0.8)', 1000, 'km/s');
+
+                // 5. LOCAL WIND SPEED
+                drawGraphHelper('LOCAL WIND SPEED', windHistory, mx, 520, w, h, 'rgba(0, 200, 255, 0.8)', 50, 'km/h');
+            }
 
             const avg = blobs.reduce((s, b) => s + (realData[b.param] || 0.5), 0) / blobs.length;
             blobs.forEach(b => {
